--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "jsonwebtoken": "^8.4.0",
     "lusca": "^1.5.2",
     "morgan": "^1.9.1",
+    "mongodb": "^3.1.6",
+    "mongoose": "^4.13.20",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
     "winston": "^2.4.0"
@@ -44,6 +46,8 @@
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.11.1",
     "@types/lusca": "^1.5.0",
+    "@types/mongodb": "^3.1.6",
+    "@types/mongoose": "^4.7.51",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.4.6",
     "@types/shelljs": "^0.7.8",
